@@ -77,6 +77,8 @@
     <resource type="image" id="star_research">sprites/research_icons/star_research.png</resource>
     <resource type="image" id="technology_research">sprites/research_icons/technology_research.png</resource>
 
+    <resource type="image" id="message">sprites/research_icons/message.png</resource>
+
     <!-- planets -->
 
     <resource type="image" id="earth">sprites/planets/earth.png</resource>
